Able to add news letter recipient to database.

--- a/src/SonOfCodSeafood/Views/Home/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Home/Index.cshtml
@@ -5,4 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
-<h1>Hi</h1>
+<h1>Sons Of Cod Seafood</h1>
+
+<h3>— A Runner up in Seafood —</h3>
