--- a/src/SonOfCodSeafood/Views/Product/Details.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Details.cshtml
@@ -5,11 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Product description:</h2>
+<h2>Product details:</h2>
 <hr />
 <strong>Name:</strong> @Html.DisplayFor(model => model.Name)
 <br />
 <strong>Description:</strong> @Html.DisplayFor(model => model.Description)
+<br />
 <br />
 <p>@Html.ActionLink("Back to Products", "Index")</p>
 <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
