Create account controller and view.

--- a/src/SonOfCodSeafood/Views/Shared/_Layout.cshtml
+++ b/src/SonOfCodSeafood/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                 <ul class="nav navbar-nav navbar-right">
                     <li><a @Html.ActionLink("News Letter", "Index", "NewsLetter")</a></li>
                     <li><a @Html.ActionLink("Visit our Products page", "Index", "Product")</a></li>
-                    <li><a @Html.ActionLink("Admin", "Index", "Admin")</a></li>
+                    <li><a @Html.ActionLink("Admin", "Index", "Account")</a></li>
                 </ul>
             </div>
         </nav>
