add registerview and register methods for Admin.

--- a/src/SonOfCodSeafood/Views/Account/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Account/Index.cshtml
@@ -6,6 +6,6 @@
 <h3>Please Log in.</h3>
 <p>@Html.ActionLink("Log in", "Login")</p>
 
-<h3>Not an Admin? Would you like to be? There's no background check. In fact, you don't even have to be an employee!</h3>
+<h3>Not an Admin? Would you like to be? There's no background check. In fact, you don't even have to be an employee! Feel free to wreak havoc on our site!</h3>
 
 <p>@Html.ActionLink("Register", "Register")</p>
