--- a/src/SonOfCodSeafood/Views/Product/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Index.cshtml
@@ -7,10 +7,10 @@
 
 <h2>Our products:</h2>
 <ul>
-    @foreach (var listItem in Model)
+    @foreach (var product in Model)
     {
         <li>
-            @Html.ActionLink(listItem.Name, "Details", new { id = listItem.ProductId }) | @Html.ActionLink("Edit", "Edit", new { id = listItem.ProductId })
+            @Html.ActionLink(product.Name, "Details", new { id = product.ProductId }) | @Html.ActionLink("Edit", "Edit", new { id = product.ProductId }) | @Html.ActionLink("Delete", "Delete", new { id = product.ProductId })
         </li>
     }
 </ul>
