only display CRUD for logged in users.

--- a/src/SonOfCodSeafood/Views/Product/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<SonOfCodSeafood.Models.Product>
+@using System.Security.Claims
 
 @{
     ViewData["Title"] = "Index";
@@ -6,13 +7,28 @@
 }
 
 <h2>Our products:</h2>
+@if (User.Identity.IsAuthenticated)
+{ 
+    <ul>
+        @foreach (var product in Model)
+        {
+            <li>
+                @Html.ActionLink(product.Name, "Details", new { id = product.ProductId }) | @Html.ActionLink("Edit", "Edit", new { id = product.ProductId }) | @Html.ActionLink("Delete", "Delete", new { id = product.ProductId })
+            </li>
+        }
+    </ul>
+}
+else
+{
 <ul>
     @foreach (var product in Model)
     {
         <li>
-            @Html.ActionLink(product.Name, "Details", new { id = product.ProductId }) | @Html.ActionLink("Edit", "Edit", new { id = product.ProductId }) | @Html.ActionLink("Delete", "Delete", new { id = product.ProductId })
+            @Html.ActionLink(product.Name, "Details", new { id = product.ProductId })
         </li>
     }
 </ul>
+
+}
 
 <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
