Add create functionality for products.

--- a/src/SonOfCodSeafood/Views/Product/Create.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h4><strong>Edit this Product:</strong> @Html.DisplayFor(model => model.Name)</h4>
+<h4>Business is booming! </h4>
 <hr />
 
 <br />
