--- a/src/SonOfCodSeafood/Views/Account/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Account/Index.cshtml
@@ -13,6 +13,10 @@
     {
         <input type="submit" class="btn btn-default" value="Log out" />
     }
+    <p>@Html.ActionLink("Back to Products", "Index")</p>
+    <br />
+    <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
+    
 }
 else
 {
@@ -22,4 +26,6 @@ else
     <h3>Not an Admin? Would you like to be? There's no background check. In fact, you don't even have to be an employee! Feel free to wreak havoc on our site!</h3>
 
     <p>@Html.ActionLink("Register", "Register")</p>
+    <br />
+    <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
 }
