--- a/src/SonOfCodSeafood/Views/Account/Login.cshtml
+++ b/src/SonOfCodSeafood/Views/Account/Login.cshtml
@@ -18,3 +18,5 @@
 
     <input type="submit" value="Log in" class="btn btn-default" />
 }
+
+<p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
