Able to push pictures into Product table and render to screen. Changed mind on table formatting a couple times.

--- a/src/SonOfCodSeafood/Views/Account/Login.cshtml
+++ b/src/SonOfCodSeafood/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Log In";
+    ViewData["Title"] = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @using SonOfCodSeafood.ViewModels
