--- a/src/SonOfCodSeafood/Views/Product/Details.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SonOfCodSeafood.Models.Product
 
 @{
-    ViewData["Title"] = "Gummy Bear Kingdom";
+    ViewData["Title"] = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
