--- a/src/SonOfCodSeafood/Views/Product/Delete.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model SonOfCodSeafood.Models.Product
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
