--- a/src/SonOfCodSeafood/Views/Shared/_Layout.cshtml
+++ b/src/SonOfCodSeafood/Views/Shared/_Layout.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
     <link href="~/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <script src="~/bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="~/bower_components/jquery/src/jquery.js"></script>
