--- a/src/SonOfCodSeafood/Views/Account/Register.cshtml
+++ b/src/SonOfCodSeafood/Views/Account/Register.cshtml
@@ -7,7 +7,7 @@
 
 @model AdminViewModel
 
-<h2>Register an Admin</h2>
+<h2>Register as an Admin</h2>
 <hr />
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
