--- a/src/SonOfCodSeafood/Views/Product/Create.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Create.cshtml
@@ -21,8 +21,16 @@
     @Html.EditorFor(model => model.Name)
     <br />
     <br />
+    @Html.LabelFor(model => model.Price, "Product Price:")
+    @Html.EditorFor(model => model.Price)
+    <br />
+    <br />
     @Html.LabelFor(model => model.Description, "Product Description:")
     @Html.EditorFor(model => model.Description)
+    <br />
+    <br />
+    @Html.LabelFor(model => model.Details, "Product Details:")
+    @Html.EditorFor(model => model.Details)
     <br />
     <br />
     <input type="submit" value="Save" />
