create product info in containers on product page.

--- a/src/SonOfCodSeafood/Views/Product/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Product/Index.cshtml
@@ -13,47 +13,28 @@
 {
     <p>@Html.ActionLink("Add a new product", "Create")</p>
     <br />
-    <ul>
-        @foreach (var product in Model)
-        {
-            <li>
-                @Html.ActionLink(product.Name, "Details", new { id = product.ProductId }) 
-                <br />
-                @if (product.Img.Length > 0)
-                {
-                    <img src="data:image/jpg;base64,@System.Convert.ToBase64String(product.Img)" />
-                }
-                <br />
-
-                @product.Description
-                <br />
-                <br />
-                @Html.ActionLink("Edit", "Edit", new { id = product.ProductId }) | @Html.ActionLink("Delete", "Delete", new { id = product.ProductId })
-            </li>
-            <br />
-            <br />
-            <div class="row">
-                <div class="col-md-4">
-                </div>
-                <div class="col-md-4">
-                    <div class="panel panel-info">
-                        <div class="panel-heading">
-                            <h2 class="panel-title">@product.Name</h2>
-                        </div>
-                        <div class="panel-body">
-                            @if (product.Img.Length > 0)
-                            {
-                                <img src="data:image/jpg;base64,@System.Convert.ToBase64String(product.Img)" />
-                            }
+    <div class="row">
+        <ul>
+            @foreach (var product in Model)
+            {
+                <li>
+                    <div id="prod" class="col-md-4">
+                        <div class="panel">
+                            <div class="panel-body">
+                                @if (product.Img.Length > 0)
+                                {
+                                    <img src="data:image/jpg;base64,@System.Convert.ToBase64String(product.Img)" , style="max-width: 100%;" />
+                                }
+                                <div class="panel-heading">
+                                    <h2 class="panel-title">@Html.ActionLink(product.Name, "Details", new { id = product.ProductId })</h2>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
-        }
-
-
-
-    </ul>
+                </li>
+            }
+        </ul>
+    </div>
 
 
 
@@ -83,3 +64,18 @@ else
 <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
 
 
+@*
+
+    @Html.ActionLink(product.Name, "Details", new { id = product.ProductId })
+    <br />
+    @if (product.Img.Length > 0)
+    {
+        <img src="data:image/jpg;base64,@System.Convert.ToBase64String(product.Img)" />
+    }
+    <br />
+
+    @product.Description
+    <br />
+    <br />
+    @Html.ActionLink("Edit", "Edit", new { id = product.ProductId }) | @Html.ActionLink("Delete", "Delete", new { id = product.ProductId })
+*@
