style fron page. Add logout button to header if logged in.

--- a/src/SonOfCodSeafood/Views/Account/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Account/Index.cshtml
@@ -14,7 +14,7 @@
         <input type="submit" class="btn btn-default" value="Log out" />
     }
     <br />
-    <p>@Html.ActionLink("Back to Products", "Index")</p>
+    <p>@Html.ActionLink("Back to Products", "Index", "Product")</p>
     <br />
     <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
 
