--- a/src/SonOfCodSeafood/Views/Home/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Home/Index.cshtml
@@ -5,6 +5,16 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
 }
-<h1>Sons Of Cod Seafood</h1>
+<row>
+    <div>
+        <img id="banner" src="~/css/img/alaska.jpg", style="height:400px;" />
+    </div>
+</row>
+<row>
+    <div id="Home">
+        <h1>Sons Of Cod Seafood</h1>
 
-<h3>— A Runner up in Seafood —</h3>
+        <h3>— A Runner up in Seafood —</h3>
+    </div>
+</row>
+
