--- a/src/SonOfCodSeafood/Views/NewsLetter/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/NewsLetter/Index.cshtml
@@ -18,7 +18,7 @@
 }
 <br />
 
-<p>@Html.ActionLink("Back to Admin", "Index")</p>
+<p>@Html.ActionLink("Back to Admin", "Index", "Account")</p>
 
 <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
 
