--- a/src/SonOfCodSeafood/Views/Account/Index.cshtml
+++ b/src/SonOfCodSeafood/Views/Account/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Security.Claims
+@model IEnumerable<SonOfCodSeafood.Models.Recipient>
 
 @{
     ViewData["Title"] = "Index";
@@ -9,6 +10,16 @@
 {
     <p>Hello @User.Identity.Name!</p>
     <hr />
+
+    <ul>
+        @foreach (var recipient in Model)
+        {
+            <li>
+                <h4>@recipient.Email</h4>
+            </li>
+        }
+    </ul>
+
     @using (Html.BeginForm("LogOff", "Account"))
     {
         <input type="submit" class="btn btn-default" value="Log out" />
@@ -18,16 +29,16 @@
     <br />
     <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
 
-}
+    }
 else
 {
-    <hr />
-    <h3>Please Log in.</h3>
-    <p>@Html.ActionLink("Login", "Login")</p>
+<hr />
+<h3>Please Log in.</h3>
+<p>@Html.ActionLink("Login", "Login")</p>
 
-    <h3>Not an Admin? Would you like to be? There's no background check. In fact, you don't even have to be an employee! Feel free to wreak havoc on our site!</h3>
+<h3>Not an Admin? Would you like to be? There's no background check. In fact, you don't even have to be an employee! Feel free to wreak havoc on our site!</h3>
 
-    <p>@Html.ActionLink("Register", "Register")</p>
-    <br />
-    <p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
+<p>@Html.ActionLink("Register", "Register")</p>
+<br />
+<p>@Html.ActionLink("Back to Home", "Index", "Home")</p>
 }
